# paperclip-orchestrator

./: .env.example  Dockerfile  README.md  docker-compose.quickstart.yml  docker-compose.yml  pnpm-lock.yaml  vitest.config.ts
ai_tools_bridge/: .gitignore  Dockerfile  README.md  pyproject.toml
ai_tools_bridge/src/ai_tools_bridge/: __init__.py  __main__.py  registry.py  server.py
ai_tools_bridge/tests/: test_server.py
doc/: DEVELOPING.md
doc/plans/: 2026-03-20-agent-plugin-configuration.md  2026-03-20-ai-tools-plugin-integration.md
scripts/: dev-runner.mjs  start-paperclip-native.sh
server/src/: app.ts
server/src/routes/: agent-plugin-overrides.ts
server/src/services/: agent-plugin-overrides.ts  index.ts
ui/: package.json
ui/src/api/: agent-plugin-overrides.ts
ui/src/components/: AgentIconPicker.tsx
ui/src/components/agent-plugin-graph/: AgentPluginGraph.tsx  ToolDetailPanel.tsx  index.ts  types.ts  use-force-layout.ts
ui/src/lib/: queryKeys.ts
ui/src/pages/: AgentDetail.tsx
